remove overflow y to fix Chrome bug

--- a/style.css
+++ b/style.css
@@ -1183,7 +1183,6 @@ body {
   padding-top: 110px;
   margin-top: 4%;
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 /***************
